--- a/backend/package.json
+++ b/backend/package.json
@@ -19,24 +19,27 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@sendgrid/mail": "^8.1.5",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
-    "express-rate-limit": "^6.8.1",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.8.1",
     "firebase-admin": "^11.10.1",
-    "multer": "^1.4.5-lts.1",
-    "qrcode": "^1.5.3",
-    "uuid": "^9.0.0",
+    "helmet": "^7.0.0",
     "joi": "^17.9.2",
-    "winston": "^3.10.0",
+    "jspdf": "^3.0.1",
     "moment": "^2.29.4",
-    "csv-writer": "^1.6.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.5",
+    "qrcode": "^1.5.4",
+    "uuid": "^9.0.0",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   },
   "engines": {
