--- a/backend/package.json
+++ b/backend/package.json
@@ -34,7 +34,8 @@
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^7.0.5",
+    "nodemailer": "^7.0.12",
+    "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
     "stripe": "^20.1.1",
     "uuid": "^9.0.0",
